--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,3 +1,4 @@
+# Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 
 on:
@@ -25,6 +26,9 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    env:
+      VITE_OPEN_WEATHER_API_KEY: 749a11b05fee8779abf04b288d4593b7
+      VITE_OPEN_WEATHER_API_URL: https://api.openweathermap.org/data/2.5/weather
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
